--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
 
-<canvas id="pinkboard"></canvas>
-
+<!--<canvas id="pinkboard"></canvas>-->
+<script src="js/test.js"></script>
 <script>
     /*
      * Settings
