--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>canvas爱心</title>
+    <title>young</title>
 
     <style>
         html, body {
