--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
             margin: 0;
             background: #000;
         }
+
         canvas {
             position: absolute;
             width: 100%;
             height: 100%;
-        }</style>
+            opacity: 0;
+            transition: all .5s;
+        }
+    </style>
 </head>
 <body>
 
-<!--<canvas id="pinkboard"></canvas>-->
+<canvas id="pinkboard"></canvas>
 <script src="js/test.js"></script>
 <script>
     /*
@@ -27,31 +31,55 @@
      */
     var settings = {
         particles: {
-            length:   500, // maximum amount of particles
-            duration:   2, // particle duration in sec
+            length: 500, // maximum amount of particles
+            duration: 2, // particle duration in sec
             velocity: 100, // particle velocity in pixels/sec
             effect: -0.75, // play with this for a nice effect
-            size:      30, // particle size in pixels
+            size: 30, // particle size in pixels
         },
     };
 
     /*
      * RequestAnimationFrame polyfill by Erik M?ller
      */
-    (function(){var b=0;var c=["ms","moz","webkit","o"];for(var a=0;a<c.length&&!window.requestAnimationFrame;++a){window.requestAnimationFrame=window[c[a]+"RequestAnimationFrame"];window.cancelAnimationFrame=window[c[a]+"CancelAnimationFrame"]||window[c[a]+"CancelRequestAnimationFrame"]}if(!window.requestAnimationFrame){window.requestAnimationFrame=function(h,e){var d=new Date().getTime();var f=Math.max(0,16-(d-b));var g=window.setTimeout(function(){h(d+f)},f);b=d+f;return g}}if(!window.cancelAnimationFrame){window.cancelAnimationFrame=function(d){clearTimeout(d)}}}());
+    (function () {
+        var b = 0;
+        var c = ["ms", "moz", "webkit", "o"];
+        for (var a = 0; a < c.length && !window.requestAnimationFrame; ++a) {
+            window.requestAnimationFrame = window[c[a] + "RequestAnimationFrame"];
+            window.cancelAnimationFrame = window[c[a] + "CancelAnimationFrame"] || window[c[a] + "CancelRequestAnimationFrame"]
+        }
+        if (!window.requestAnimationFrame) {
+            window.requestAnimationFrame = function (h, e) {
+                var d = new Date().getTime();
+                var f = Math.max(0, 16 - (d - b));
+                var g = window.setTimeout(function () {
+                    h(d + f)
+                }, f);
+                b = d + f;
+                return g
+            }
+        }
+        if (!window.cancelAnimationFrame) {
+            window.cancelAnimationFrame = function (d) {
+                clearTimeout(d)
+            }
+        }
+    }());
 
     /*
      * Point class
      */
-    var Point = (function() {
+    var Point = (function () {
         function Point(x, y) {
             this.x = (typeof x !== 'undefined') ? x : 0;
             this.y = (typeof y !== 'undefined') ? y : 0;
         }
-        Point.prototype.clone = function() {
+
+        Point.prototype.clone = function () {
             return new Point(this.x, this.y);
         };
-        Point.prototype.length = function(length) {
+        Point.prototype.length = function (length) {
             if (typeof length == 'undefined')
                 return Math.sqrt(this.x * this.x + this.y * this.y);
             this.normalize();
@@ -59,7 +87,7 @@
             this.y *= length;
             return this;
         };
-        Point.prototype.normalize = function() {
+        Point.prototype.normalize = function () {
             var length = this.length();
             this.x /= length;
             this.y /= length;
@@ -71,14 +99,15 @@
     /*
      * Particle class
      */
-    var Particle = (function() {
+    var Particle = (function () {
         function Particle() {
             this.position = new Point();
             this.velocity = new Point();
             this.acceleration = new Point();
             this.age = 0;
         }
-        Particle.prototype.initialize = function(x, y, dx, dy) {
+
+        Particle.prototype.initialize = function (x, y, dx, dy) {
             this.position.x = x;
             this.position.y = y;
             this.velocity.x = dx;
@@ -87,17 +116,18 @@
             this.acceleration.y = dy * settings.particles.effect;
             this.age = 0;
         };
-        Particle.prototype.update = function(deltaTime) {
+        Particle.prototype.update = function (deltaTime) {
             this.position.x += this.velocity.x * deltaTime;
             this.position.y += this.velocity.y * deltaTime;
             this.velocity.x += this.acceleration.x * deltaTime;
             this.velocity.y += this.acceleration.y * deltaTime;
             this.age += deltaTime;
         };
-        Particle.prototype.draw = function(context, image) {
+        Particle.prototype.draw = function (context, image) {
             function ease(t) {
                 return (--t) * t * t + 1;
             }
+
             var size = image.width * ease(this.age / settings.particles.duration);
             context.globalAlpha = 1 - this.age / settings.particles.duration;
             context.drawImage(image, this.position.x - size / 2, this.position.y - size / 2, size, size);
@@ -108,11 +138,11 @@
     /*
      * ParticlePool class
      */
-    var ParticlePool = (function() {
+    var ParticlePool = (function () {
         var particles,
             firstActive = 0,
-            firstFree   = 0,
-            duration    = settings.particles.duration;
+            firstFree = 0,
+            duration = settings.particles.duration;
 
         function ParticlePool(length) {
             // create and populate particle pool
@@ -120,16 +150,17 @@
             for (var i = 0; i < particles.length; i++)
                 particles[i] = new Particle();
         }
-        ParticlePool.prototype.add = function(x, y, dx, dy) {
+
+        ParticlePool.prototype.add = function (x, y, dx, dy) {
             particles[firstFree].initialize(x, y, dx, dy);
 
             // handle circular queue
             firstFree++;
-            if (firstFree   == particles.length) firstFree   = 0;
-            if (firstActive == firstFree       ) firstActive++;
+            if (firstFree == particles.length) firstFree = 0;
+            if (firstActive == firstFree) firstActive++;
             if (firstActive == particles.length) firstActive = 0;
         };
-        ParticlePool.prototype.update = function(deltaTime) {
+        ParticlePool.prototype.update = function (deltaTime) {
             var i;
 
             // update active particles
@@ -152,7 +183,7 @@
 
 
         };
-        ParticlePool.prototype.draw = function(context, image) {
+        ParticlePool.prototype.draw = function (context, image) {
             // draw active particles
             if (firstActive < firstFree) {
                 for (i = firstActive; i < firstFree; i++)
@@ -171,7 +202,7 @@
     /*
      * Putting it all together
      */
-    (function(canvas) {
+    (function (canvas) {
         var context = canvas.getContext('2d'),
             particles = new ParticlePool(settings.particles.length),
             particleRate = settings.particles.length / settings.particles.duration, // particles/sec
@@ -186,11 +217,12 @@
         }
 
         // creating the particle image using a dummy canvas
-        var image = (function() {
-            var canvas  = document.createElement('canvas'),
+        var image = (function () {
+            var canvas = document.createElement('canvas'),
                 context = canvas.getContext('2d');
-            canvas.width  = settings.particles.size;
+            canvas.width = settings.particles.size;
             canvas.height = settings.particles.size;
+
             // helper function to create the path
             function to(t) {
                 var point = pointOnHeart(t);
@@ -198,6 +230,7 @@
                 point.y = settings.particles.size / 2 - point.y * settings.particles.size / 350;
                 return point;
             }
+
             // create the path
             context.beginPath();
             var t = -Math.PI;
@@ -224,7 +257,7 @@
             requestAnimationFrame(render);
 
             // update time
-            var newTime   = new Date().getTime() / 1000,
+            var newTime = new Date().getTime() / 1000,
                 deltaTime = newTime - (time || newTime);
             time = newTime;
 
@@ -246,16 +279,16 @@
 
         // handle (re-)sizing of the canvas
         function onResize() {
-            console.log('hala')
-            canvas.width  = canvas.clientWidth;
+            canvas.width = canvas.clientWidth;
             canvas.height = canvas.clientHeight;
         }
+
         window.onresize = onResize;
         setInterval(() => {
             // onResize()
         }, 1500)
         // delay rendering bootstrap
-        setTimeout(function() {
+        setTimeout(function () {
             onResize();
             render();
         }, 10);
